--- a/environment.yml
+++ b/environment.yml
@@ -11,7 +11,7 @@ dependencies:
   - pytorch-cuda=12.4
   - cuda-toolkit=12.4
   - numpy
-  - transformers
+  - transformers=4.57.5
   - pip:
       - vllm==0.7.2
       - wandb==0.19.8
